--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/StefanLazea/wb-transport#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql2": "^2.0.0",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "uuid": "^3.3.3"
   }
 }
