--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/StefanLazea/wb-transport#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
