--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+back-end/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
