--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.0.0",
     "sequelize": "^5.21.2",
     "uuid": "^3.3.3"
