--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^16.12.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-toastify": "^5.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
