--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 back-end/node_modules/
-.env
-configuration.json
+back-end/configuration.json
+front-end/src/configuration.json
 front-end/node_modules/
 .vscode/
