--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^16.12.0",
     "react-bootstrap": "^0.33.0",
     "react-dom": "^16.12.0",
