--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,7 +18,7 @@
     "react-toastify": "^5.5.0"
   },
   "scripts": {
-    "start": "PORT=3001 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
